[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = { version = "^0.12", features = ["tables-api", "docking", "freetype"] }
ash = { version = "0.38", default-features = false, features = [
    "debug",
    "linked",
] }
ultraviolet = "0.9"
gpu-allocator = { version = "0.27", default-features = false, features = [
    "vulkan",
] }
imgui-rs-vulkan-renderer = { version = "1.16.0", features = ["gpu-allocator"] }
simple_logger = "5.0"
winit = "0.29"
imgui-winit-support = "^0.12"
ash-window = "0.13"
image = "0.25"
material-icons = "0.2"
spirv-compiler = "0.2.0"

[features]
default = ["gpu-allocator"]
gpu-allocator = []
vk-mem = []
